<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#53ae31"
    android:orientation="vertical"
    tools:context=".AboutHD" >

    <TextView
        android:id="@+id/tvhd4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvhd2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:gravity="center_horizontal"
        android:text="@string/about_hd_4"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvhd6"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvhd5"
        android:layout_centerHorizontal="true"
        android:text="@string/about_hd_6"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvhd3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvhd6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:gravity="center_horizontal"
        android:text="@string/about_hd_3"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvhd1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal"
        android:text="@string/about_hd_1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvhd5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvhd4"
        android:gravity="center_horizontal"
        android:text="@string/about_hd_5"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvhd2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvhd1"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/about_hd_2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>